--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ android:
 install:
   - bundle install
 script:
-  - ./gradlew assembleDebug
-  - ./gradlew ktlintCheck || true  # Continue build even if ktlint reports errors
+  - ./gradlew assembleDebug ktlintCheck
   - bundle exec danger
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
