--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,10 @@ android {
 }
 
 ktlint {
-    version = "0.9.2"
+    version = "0.14.0"
+    android = true
     reporter = "checkstyle"
+    ignoreFailures = true
 }
 
 dependencies {
